# Cython-OpenMP-GPU-Offload

./: .gitignore  README.md  main.py  pyproject.toml  run_gpu.sh  setup.py
src/gpuomp/: __init__.py  gpu.cpp  gpu.pyx  gpu_kernel.cpp
