[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuomp"
version = "0.1.0"
description = "Cython wrapper calling OpenMP target offload C++ kernels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
